cmake_minimum_required(VERSION 3.22.1)
project(apuntestallerC)
set(CMAKE_C_STANDARD 11)
add_executable(apuntestallerC main.c Ejercicio1.h Ejercicio1.c Ejercicio2.h Ejercicio2.c Ejercicio3.h Ejercicio3.c Ejercicio4.h Ejercicio4.c Ejercicio5.h Ejercicio5.c Ejercicio6.c Ejercicio6.h Ejercicio7.c Ejercicio7.h Ejercicio8.c Ejercicio8.h Ejercicio9.c Ejercicio9.h Ejercicio10.c Ejercicio10.h Ejercicio11.c Ejercicio11.h Ejercicio12.c Ejercicio12.h Ejercicio13.c Ejercicio13.h Ejercicio14.c Ejercicio14.h)
#Ctrl Shift P > CMake: Select a kit > Select a variable > Debug
#cada vez que agrego un archivo dentro del add executable, le doy build para que compile la informacion

